Oct 04, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- fix segfault at doom3 version detection (reported by Steffen Pankratz)

Oct 02, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- automatically detect the doom3 network protocol version
- add support for Netpanzer (> 0.1.6). Thanks Matze Braun for the patch.

Sep 26, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for gslist. Thanks to Luigi Auriemma for making this
  possible!
- drop broken master servers, add some new ones for quake2
- update German translation
- version 1.0.0.2

Sep 12, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix UT99 master server listing
- Allow to completely overwrite the qstat master argument via config file

Aug 22, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Set default master protocol version for COD to 5

Aug 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Apply brightness correction to mapshots

Aug 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix usage of AC_ARG_ENABLE (#1010440). Thanks Mike Frysinger for reporting.

Aug 16, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix quickfilter not working when pressing backspace or delete in the empty
  textentry (thanks Ruediger Meier for spotting this one).
- add new tray icons from Jochen Baier
- set version to 1.0.0.1

Aug 15, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix compile with gcc 2.95 (patch by Thomas Zajic)
- Fix --add when one server without type is specified whose port matches
  exactly one game.

Aug 15, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- released 1.0

Aug 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Use TGA loader from quake2 if gdk-pixbuf fails to load a mapshot. Useful for
  at least Q3, RTCW, ET and Doom3 mapshots.
- require qstat version 2.6

Aug 13, 2004: Jordi Mallach <jordi@sindominio.net>
- update Catalan and Spanish translations
- fix Makevar so intltool works ok
- remove updateonepo, use intltool-update instead.
