@@ -541,18 +541,16 @@ struct game games[] = {
     type                : DESCENT3_SERVER,
     flags               : GAME_CONNECT,
     name                : "Descent3",
-    default_port        : 2092,
-    default_master_port : 3445,
-    id                  : "D3P",
-    qstat_str           : "D3P",
-    qstat_option        : "-d3p",
-    qstat_master_option : "-d3m",
+    default_port        : 20142,
+    id                  : "D3G",
+    qstat_str           : "D3G",
+    qstat_option        : "-d3g",
     icon                : "descent3_xpm",
     parse_player        : descent3_parse_player,
     parse_server        : quake_parse_server,
     analyze_serverinfo  : descent3_analyze_serverinfo,
     config_is_valid     : config_is_valid_generic,
-    exec_client         : exec_generic,
+    exec_client         : gamespy_exec,
     save_info           : quake_save_info,
     command             : stringlist024,
   },
@@ -738,7 +736,7 @@ struct game games[] = {
     parse_server        : quake_parse_server,
     analyze_serverinfo  : un_analyze_serverinfo,
     config_is_valid     : config_is_valid_generic,
-    exec_client         : gamespy_exec,
+    exec_client         : descent3_exec,
     save_info           : quake_save_info,
   },
   {
