@@ -420,16 +420,18 @@
 	<type>DESCENT3_SERVER</type>
 	<name>Descent3</name>
 	<flags>GAME_CONNECT</flags>
-	<default_port>2092</default_port>
+	<default_port>20142</default_port>
+	<id>D3G</id>
+	<qstat_str>D3G</qstat_str>
+	<qstat_option>-d3g</qstat_option>
+	<!--
 	<default_master_port>3445</default_master_port>
-	<id>D3P</id>
-	<qstat_str>D3P</qstat_str>
-	<qstat_option>-d3p</qstat_option>
 	<qstat_master_option>-d3m</qstat_master_option>
+	-->
 	<icon>descent3_xpm</icon>
 	<parse_player>descent3_parse_player</parse_player>
 	<analyze_serverinfo>descent3_analyze_serverinfo</analyze_serverinfo>
-	<exec_client>exec_generic</exec_client>
+	<exec_client>gamespy_exec</exec_client>
 	<command>descent3</command>
     </game>
     <game>
@@ -555,7 +557,7 @@
 	<icon>gamespy3d_xpm</icon>
 	<parse_player>un_parse_player</parse_player>
 	<analyze_serverinfo>un_analyze_serverinfo</analyze_serverinfo>
-	<exec_client>gamespy_exec</exec_client>
+	<exec_client>descent3_exec</exec_client>
     </game>
     <game>
 	<type>UNKNOWN_SERVER</type>
